// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser: expression ContextType 1`] = `
Object {
  "body": Object {
    "context": "use js",
    "source": "const type = \\"1\\";
return type;

",
  },
  "kind": "ContextType",
}
`;

exports[`parser: expression ContextType: with resolver 1`] = `
Object {
  "kind": "StringTypeLiteral",
  "value": "resolved",
}
`;

exports[`parser: expression IntersectionType 1`] = `
Object {
  "kind": "IntersectionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": "0",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "1",
    },
  ],
}
`;

exports[`parser: expression IntersectionType 2`] = `
Object {
  "kind": "IntersectionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": "0",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "1",
    },
  ],
}
`;

exports[`parser: expression UnionType 1`] = `
Object {
  "kind": "UnionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": "0",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "1",
    },
  ],
}
`;

exports[`parser: expression UnionType 2`] = `
Object {
  "kind": "UnionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": "0",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "1",
    },
  ],
}
`;

exports[`parser: expression UnionType: special char 1`] = `
Object {
  "kind": "UnionType",
  "types": Array [
    Object {
      "kind": "StringTypeLiteral",
      "value": " ",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "\\\\n",
    },
    Object {
      "kind": "StringTypeLiteral",
      "value": "\\\\t",
    },
  ],
}
`;
